# snoopy

./: Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  justfile
configurations/: config_1.toml  config_2.toml  config_3.toml
src/: config.rs  lib.rs  main.rs
