[package]
name = "snoopy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
] }
tun = { version = "0.7.13", features = ["async"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["std", "chrono", "fmt"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
